--- a/k-sat_grover.ipynb
+++ b/k-sat_grover.ipynb
@@ -1,13 +1,74 @@
 {
  "cells": [
   {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-04-20T08:29:17.231157Z",
+     "start_time": "2024-04-20T08:29:17.225754Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "problem = [[1,0,0,0],[1,0,1,0],[0,-1,0,0],[0,0,0,-1],[0,0,1,1]]"
+   ],
+   "id": "fa802f43ab19b446",
+   "outputs": [],
+   "execution_count": 20
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-04-20T08:29:17.649205Z",
+     "start_time": "2024-04-20T08:29:17.646029Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "def create_formula(problem):\n",
+    "    string = ''\n",
+    "    for row in problem:\n",
+    "        temp = []\n",
+    "        counter = 1\n",
+    "        for element in row:\n",
+    "            if element == 1:\n",
+    "                temp.append('x' + str(counter))\n",
+    "            elif element == -1:\n",
+    "                temp.append('not x' + str(counter))\n",
+    "            counter += 1\n",
+    "\n",
+    "        if len(temp) == 1:\n",
+    "            string += '(' + temp[0] + ')' + 'and'\n",
+    "        elif len(temp) > 1:\n",
+    "            string += '(' + ' or '.join(temp) + ')' + 'and'\n",
+    "    return '(' + string[:-3] + ')'"
+   ],
+   "id": "4b077ccdacb8f45",
+   "outputs": [],
+   "execution_count": 21
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-04-20T08:29:18.695911Z",
+     "start_time": "2024-04-20T08:29:18.692002Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "formula1 = create_formula(problem)",
+   "id": "e6571db108463b0c",
+   "outputs": [],
+   "execution_count": 22
+  },
+  {
    "cell_type": "code",
    "id": "initial_id",
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-04-19T14:53:24.870957Z",
-     "start_time": "2024-04-19T14:53:24.867534Z"
+     "end_time": "2024-04-20T08:29:19.523026Z",
+     "start_time": "2024-04-20T08:29:19.520305Z"
     }
    },
    "source": [
@@ -16,13 +77,13 @@
     "\"\"\""
    ],
    "outputs": [],
-   "execution_count": 1
+   "execution_count": 23
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-04-19T14:54:36.647879Z",
-     "start_time": "2024-04-19T14:54:32.790251Z"
+     "end_time": "2024-04-20T08:29:34.898714Z",
+     "start_time": "2024-04-20T08:29:34.811249Z"
     }
    },
    "cell_type": "code",
@@ -30,7 +91,7 @@
     "try:\n",
     "    import ttg\n",
     "\n",
-    "    print(ttg.Truths([\"x1\", \"x2\", \"x3\", \"x4\"], [formula[1:-1]]))\n",
+    "    print(ttg.Truths([\"x1\", \"x2\", \"x3\", \"x4\"], [formula1[1:-1]]))\n",
     "except:\n",
     "    print(\"Please import 'truth-table-generator' in order to print the truth table\")"
    ],
@@ -40,36 +101,36 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "+------+------+------+------+------------------------------------------------------------------------+\n",
-      "|  x1  |  x2  |  x3  |  x4  |      ( (x1) and (x1 or x3) and (not x2) and (not x4) and (x3 or x4) )  |\n",
-      "|------+------+------+------+------------------------------------------------------------------------|\n",
-      "|  1   |  1   |  1   |  1   |                                   1                                    |\n",
-      "|  1   |  1   |  1   |  0   |                                   1                                    |\n",
-      "|  1   |  1   |  0   |  1   |                                   1                                    |\n",
-      "|  1   |  1   |  0   |  0   |                                   1                                    |\n",
-      "|  1   |  0   |  1   |  1   |                                   1                                    |\n",
-      "|  1   |  0   |  1   |  0   |                                   1                                    |\n",
-      "|  1   |  0   |  0   |  1   |                                   1                                    |\n",
-      "|  1   |  0   |  0   |  0   |                                   1                                    |\n",
-      "|  0   |  1   |  1   |  1   |                                   0                                    |\n",
-      "|  0   |  1   |  1   |  0   |                                   0                                    |\n",
-      "|  0   |  1   |  0   |  1   |                                   0                                    |\n",
-      "|  0   |  1   |  0   |  0   |                                   0                                    |\n",
-      "|  0   |  0   |  1   |  1   |                                   0                                    |\n",
-      "|  0   |  0   |  1   |  0   |                                   0                                    |\n",
-      "|  0   |  0   |  0   |  1   |                                   0                                    |\n",
-      "|  0   |  0   |  0   |  0   |                                   0                                    |\n",
-      "+------+------+------+------+------------------------------------------------------------------------+\n"
+      "+------+------+------+------+--------------------------------------------------------+\n",
+      "|  x1  |  x2  |  x3  |  x4  |  (x1)and(x1 or x3)and(not x2)and(not x4)and(x3 or x4)  |\n",
+      "|------+------+------+------+--------------------------------------------------------|\n",
+      "|  1   |  1   |  1   |  1   |                           0                            |\n",
+      "|  1   |  1   |  1   |  0   |                           0                            |\n",
+      "|  1   |  1   |  0   |  1   |                           0                            |\n",
+      "|  1   |  1   |  0   |  0   |                           0                            |\n",
+      "|  1   |  0   |  1   |  1   |                           0                            |\n",
+      "|  1   |  0   |  1   |  0   |                           1                            |\n",
+      "|  1   |  0   |  0   |  1   |                           0                            |\n",
+      "|  1   |  0   |  0   |  0   |                           0                            |\n",
+      "|  0   |  1   |  1   |  1   |                           0                            |\n",
+      "|  0   |  1   |  1   |  0   |                           0                            |\n",
+      "|  0   |  1   |  0   |  1   |                           0                            |\n",
+      "|  0   |  1   |  0   |  0   |                           0                            |\n",
+      "|  0   |  0   |  1   |  1   |                           0                            |\n",
+      "|  0   |  0   |  1   |  0   |                           0                            |\n",
+      "|  0   |  0   |  0   |  1   |                           0                            |\n",
+      "|  0   |  0   |  0   |  0   |                           0                            |\n",
+      "+------+------+------+------+--------------------------------------------------------+\n"
      ]
     }
    ],
-   "execution_count": 3
+   "execution_count": 27
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-04-19T14:56:15.372420Z",
-     "start_time": "2024-04-19T14:55:48.130495Z"
+     "end_time": "2024-04-20T08:29:35.692727Z",
+     "start_time": "2024-04-20T08:29:35.681114Z"
     }
    },
    "cell_type": "code",
@@ -80,7 +141,7 @@
     "\n",
     "qmod = construct_grover_model(\n",
     "    num_reps=1,\n",
-    "    expression=\"(\" + formula + \")\",\n",
+    "    expression=\"(\" + formula1 + \")\",\n",
     "    definitions=[\n",
     "        (\"x1\", register_size),\n",
     "        (\"x2\", register_size),\n",
@@ -91,13 +152,13 @@
    ],
    "id": "9341e98d12669adb",
    "outputs": [],
-   "execution_count": 5
+   "execution_count": 28
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-04-19T14:56:53.907888Z",
-     "start_time": "2024-04-19T14:56:53.891731Z"
+     "end_time": "2024-04-20T08:29:36.664707Z",
+     "start_time": "2024-04-20T08:29:36.656182Z"
     }
    },
    "cell_type": "code",
@@ -108,30 +169,34 @@
    ],
    "id": "1e51df1c9cb1da03",
    "outputs": [],
-   "execution_count": 6
+   "execution_count": 29
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-04-19T14:57:30.109494Z",
-     "start_time": "2024-04-19T14:57:11.942008Z"
+     "end_time": "2024-04-20T08:29:41.989328Z",
+     "start_time": "2024-04-20T08:29:37.283727Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "from classiq import QuantumProgram, synthesize\n",
+    "from classiq import QuantumProgram, synthesize, create_model, Preferences, set_preferences\n",
     "\n",
-    "qprog = synthesize(qmod)"
+    "preferences = Preferences(\n",
+    "    backend_service_provider=\"IBM Quantum\", backend_name=\"ibm_sherbrooke\"\n",
+    ")\n",
+    "model = set_preferences(qmod, preferences)\n",
+    "qprog = synthesize(model)"
    ],
    "id": "95e21f063c50123b",
    "outputs": [],
-   "execution_count": 7
+   "execution_count": 30
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-04-19T14:57:53.045370Z",
-     "start_time": "2024-04-19T14:57:50.839875Z"
+     "end_time": "2024-04-20T08:29:46.072200Z",
+     "start_time": "2024-04-20T08:29:44.741770Z"
     }
    },
    "cell_type": "code",
@@ -145,52 +210,38 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Opening: https://platform.classiq.io/circuit/2b5509e0-82de-4183-8960-74e0dd8876a1?version=0.40.0\n"
+      "Opening: https://platform.classiq.io/circuit/68c9243d-aa27-4bd8-96e5-fa304f09f1af?version=0.40.0\n"
      ]
     }
    ],
-   "execution_count": 8
+   "execution_count": 31
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-04-19T15:01:18.980785Z",
-     "start_time": "2024-04-19T15:01:18.859298Z"
+     "end_time": "2024-04-20T08:29:49.381722Z",
+     "start_time": "2024-04-20T08:29:49.368773Z"
     }
    },
    "cell_type": "code",
-   "source": [
-    "print(circuit.transpiled_circuit.depth)\n",
-    "print(circuit.width)"
-   ],
+   "source": "print(circuit.transpiled_circuit.depth)",
    "id": "baa26f3580aa0d2b",
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "173\n"
-     ]
-    },
-    {
-     "ename": "AttributeError",
-     "evalue": "'QuantumProgram' object has no attribute 'width'",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[0;31mAttributeError\u001B[0m                            Traceback (most recent call last)",
-      "Cell \u001B[0;32mIn[13], line 2\u001B[0m\n\u001B[1;32m      1\u001B[0m \u001B[38;5;28mprint\u001B[39m(circuit\u001B[38;5;241m.\u001B[39mtranspiled_circuit\u001B[38;5;241m.\u001B[39mdepth)\n\u001B[0;32m----> 2\u001B[0m \u001B[38;5;28mprint\u001B[39m(\u001B[43mcircuit\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mwidth\u001B[49m)\n",
-      "\u001B[0;31mAttributeError\u001B[0m: 'QuantumProgram' object has no attribute 'width'"
+      "626\n"
      ]
     }
    ],
-   "execution_count": 13
+   "execution_count": 32
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-04-19T14:59:37.361199Z",
-     "start_time": "2024-04-19T14:59:31.659734Z"
+     "end_time": "2024-04-20T08:29:55.781274Z",
+     "start_time": "2024-04-20T08:29:50.546366Z"
     }
    },
    "cell_type": "code",
@@ -213,26 +264,26 @@
    ],
    "id": "21e57a62bfc2354e",
    "outputs": [],
-   "execution_count": 10
+   "execution_count": 33
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-04-19T14:59:52.253504Z",
-     "start_time": "2024-04-19T14:59:52.247002Z"
+     "end_time": "2024-04-20T08:29:55.788743Z",
+     "start_time": "2024-04-20T08:29:55.784334Z"
     }
    },
    "cell_type": "code",
    "source": "res = optimization_result[0].value",
    "id": "a56cc89cf3ad97d",
    "outputs": [],
-   "execution_count": 11
+   "execution_count": 34
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-04-19T15:00:08.979575Z",
-     "start_time": "2024-04-19T15:00:08.965082Z"
+     "end_time": "2024-04-20T08:29:55.796442Z",
+     "start_time": "2024-04-20T08:29:55.790170Z"
     }
    },
    "cell_type": "code",
@@ -242,30 +293,30 @@
     {
      "data": {
       "text/plain": [
-       "{('0', '1', '1', '1'): 73,\n",
-       " ('1', '1', '1', '1'): 91,\n",
-       " ('1', '0', '0', '0'): 83,\n",
-       " ('0', '1', '0', '1'): 65,\n",
-       " ('1', '0', '0', '1'): 63,\n",
-       " ('1', '0', '1', '0'): 951,\n",
-       " ('1', '0', '1', '1'): 60,\n",
-       " ('1', '1', '0', '1'): 71,\n",
-       " ('1', '1', '1', '0'): 72,\n",
-       " ('1', '1', '0', '0'): 67,\n",
-       " ('0', '0', '1', '0'): 89,\n",
-       " ('0', '0', '0', '0'): 81,\n",
-       " ('0', '1', '0', '0'): 64,\n",
-       " ('0', '0', '1', '1'): 77,\n",
-       " ('0', '1', '1', '0'): 66,\n",
-       " ('0', '0', '0', '1'): 75}"
+       "{('1', '0', '1', '1'): 82,\n",
+       " ('0', '1', '0', '0'): 76,\n",
+       " ('1', '1', '0', '0'): 76,\n",
+       " ('1', '1', '1', '0'): 81,\n",
+       " ('1', '1', '0', '1'): 75,\n",
+       " ('1', '0', '0', '1'): 69,\n",
+       " ('1', '0', '1', '0'): 934,\n",
+       " ('0', '1', '1', '1'): 82,\n",
+       " ('0', '0', '1', '1'): 72,\n",
+       " ('0', '0', '0', '1'): 74,\n",
+       " ('0', '1', '1', '0'): 84,\n",
+       " ('0', '0', '1', '0'): 59,\n",
+       " ('0', '0', '0', '0'): 71,\n",
+       " ('0', '1', '0', '1'): 74,\n",
+       " ('1', '0', '0', '0'): 69,\n",
+       " ('1', '1', '1', '1'): 70}"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 12
+   "execution_count": 35
   },
   {
    "metadata": {},
@@ -273,7 +324,7 @@
    "outputs": [],
    "execution_count": null,
    "source": "",
-   "id": "bfb15e0bb5663f92"
+   "id": "cb4970f1b9ba6b2d"
   }
  ],
  "metadata": {
